# richards_test

./: Dockerfile  README.md  buildspec.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  something.py  somethingv2  testing_notebook.ipynb  tox.ini
.github/: CODEOWNERS
.github/workflows/: main.yml
loading/: ccgi_utilities.py  file_import.py  requirements.txt
other_team_dir/: other_team_file
other_team_dir/some_other_dir/: nested.txt
tests/: conftest.py  test_my_test.py
