# This designates how we want to connect our frontend to the backend
# Front end refers to pip and other tools that connect to the backend (like wheels) to build your packages
# and their dependencies (see build-system)


[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

# items below are configurations for the testing env
[tool.pytest.ini_options]
addopts = "--cov=test_package"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true