# This file is here to store metadata and options for your packages
# instead of pyproject.toml where it is sometimes specified
# if you were not using setup tools as the backend, these would
# be moved into your toml file.

[metadata]
name = test
description = testing a python package
author = Richard Chuang
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    test_package
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
# These items pertain to the requirements_dev.txt file required for building a test pacakge
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
# lets the file know that there exists type hinting
test_package = py.typed

[flake8]
max-line-length = 160